<resources>
    <string name="app_name">My APCC</string>
    <string name="change_bhai">My APCC</string>
    <string name="wifi_connection">The active connection is wifi.</string>
    <string name="mobile_connection">The active connection is mobile.</string>
    <string name="no_wifi_or_mobile">No wireless or mobile connection.</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="areas_cover">Areas We Cover</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="upload_issues">Upload Issues Around You</string>
    <string name="truck_1">Truck type 1</string>
    <string name="truck_2">Truck type 2</string>
    <string name="dustbin">Dustbin</string>
    <string name="title_activity_activity_splash">Activity_splash</string>
    <string name="search_location"> Areas We Cover</string>
    <string name="reg_text">All we need is your Name and Mobile Number to begin!</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_email">Your Email ID</string>
    <string name="title_activity_activity_search">Activity_search</string>
    <string name="search_hint">Search location</string>
    <string name="no_search_result">No Locations Found</string>
    <string name="internal_storage">Internal storage</string>
    <string name="sample_about_us">Adar Poonawalla Clean City is an environmentally sustainable initiative undertaken by Serum Institute of India and Mr.Adar Poonawalla as a contribution towards social responsibility. It aspires to make Indian urban cities more livable sharing the vision of our Prime Minister Mr.Narendra Modis Swachh Bharat Abhiyan.  Pune is the first city to adopt this initiative with an initial investment of Rs.100 crores.</string>
    <string name="know_more">To know more, visit</string>
    <string name="email">www.myapcc.com </string>
    <string name="no_internet_message">Your internet connection is off. Please switch it on.</string>
    <string name="hint_mobile">Your Mobile Number</string>
    <string name="otp_failed_to_detect">Message not detected, Please enter OTP (One time password)</string>
    <string name="Continue">Continue</string>
    <string name="version_upgrade">New version available</string>
    <string name="or"> or </string>
    <string name="email2">www.adarpcleancity.com.</string>
    <string name="gps_setting">To continue, let your device turn on location.</string>
    <string name="poor_internet_message">Your internet connection is too slow. Please try again later.</string>
    <!--string name="fetching_data_msg">App is still fetching My APCC required data. Please try again later.</string-->
    <string name="fetching_data_msg">Your device is taking more time than usual to import our mapped data. Please try after 15 seconds.</string>
    <string name="channel_name">complaint</string>
    <string name="channel_description">Channel used to show complaint related notifications</string>
</resources>
