<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.mobilesutra.seed.activities.ActivityAboutUs">

    <include
        android:id="@+id/toolbar_upload_issues"
        layout="@layout/toolbar_upload_issues" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/toolbar_actionbar1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <TextView
                android:id="@+id/AboutUs_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:text="About Us"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/AboutUs_textView"
                android:layout_marginBottom="@dimen/dp_5"
                android:text="@string/sample_about_us"
                android:textSize="@dimen/text_18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_know_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/know_more"
                    android:textSize="@dimen/text_18sp" />

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txt_know_more"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:autoLink="web"
                    android:text="@string/email"
                    android:textSize="@dimen/text_18sp" />

                <TextView
                    android:id="@+id/txt_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_email"
                    android:text="@string/or"
                    android:textSize="@dimen/text_18sp" />

                <TextView
                    android:id="@+id/txt_email2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txt_or"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_below="@+id/txt_email"
                    android:autoLink="web"
                    android:text="@string/email2"
                    android:textSize="@dimen/text_18sp" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
