<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.change22.myapcc.activities.Activity_Login"
    android:layout_gravity="center">

    <ScrollView
        android:id="@+id/scrollView123"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_app_icon"
                android:layout_width="@dimen/img_deal_medium_hw"
                android:layout_height="@dimen/img_deal_medium_hw"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_app_icon"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/reg_text"
                android:textColor="@color/material_grey"
                android:textSize="@dimen/text_20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/hint_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_name"
                android:layout_marginTop="@dimen/dp_5"
                android:maxLength="10"
                android:hint="@string/hint_mobile"
                android:inputType="phone" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/button"
                android:padding="@dimen/dp_10"
                android:text="Ready To Go"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
